# Data_Processing

./: .gitignore  Readme.md  conda_requirements.txt
CPP/: CMakeLists.txt
CPP/src/: CMakeLists.txt
CPP/src/CPPAD/: AD_demo.cpp  AD_demo.h  CMakeLists.txt  cppad.cpp  cppad库函数.ipynb  自动微分原理.ipynb
CPP/src/Casadi/: CMakeLists.txt  Casadi_Cpp_接口与用法.ipynb  Casadi介绍.ipynb  casadi_demo.cpp  casadi_demo.h
CPP/src/Cilqr/: CMakeLists.txt  LQR.cpp  LQR.h  main.cpp  变分法.ipynb  离散CILQR.ipynb  离散ILQR.ipynb  离散LQR.ipynb  离散cilqr问题.ipynb  连续lqr问题.ipynb
CPP/src/Eigen/: CMakeLists.txt  eigen_learn.cpp  eigen_learn.h  eigen库介绍.ipynb  main.cpp
CPP/src/ILQGame/: 连续动态博弈问题.ipynb
CPP/src/IPOPT/: CMakeLists.txt  IPOPT.ipynb  IPOPT_demo.cpp  IPOPT_demo.h  IPOPT介绍.ipynb  main.cpp  非线性规划基础.ipynb
CPP/src/OSQP/: CMakeLists.txt  osqp.c  osqp_cpp.cpp  二次规划.ipynb
CPP/src/gflag/: CMakeLists.txt
CPP/src/glog/: CMakeLists.txt  main.cpp
python/: requirements.txt
python/RL/: expert_data.py  rl_utils.py  第10章-Actor-Critic算法.ipynb  第11章-TRPO算法.ipynb  第12章-PPO算法.ipynb  第13章-DDPG算法.ipynb  第14章-SAC算法.ipynb  第15章-模仿学习.ipynb  第15章补充1-最大边际IRL.ipynb  第15章补充2-最大熵IRL .ipynb  第16章-模型预测控制.ipynb  第17章-基于模型的策略优化.ipynb  第18章-离线强化学习.ipynb  第19章-目标导向的强化学习.ipynb  第20章-多智能体强化学习入门.ipynb  第21章-多智能体强化学习进阶.ipynb  第2章-多臂老虎机问题.ipynb  第3章-马尔可夫决策过程.ipynb  第4章-动态规划算法.ipynb  第5章-时序差分算法.ipynb  第7章-DQN算法.ipynb  第8章-DQN改进算法.ipynb  第9章-策略梯度算法.ipynb  补充1-MCTS.ipynb
python/RL/Basic_knowledge/: _4MC_algrithm.py  debug_script.py  expert_data.py  第10章-Actor-Critic算法.ipynb  第15章-模仿学习.ipynb  第16章-模型预测控制.ipynb  第17章-基于模型的策略优化.ipynb  第18章-离线强化学习.ipynb  第19章-目标导向的强化学习.ipynb  第20章-多智能体强化学习入门.ipynb  第6章-Dyna-Q算法.ipynb  第8章-DQN改进算法.ipynb  第9章-策略梯度算法.ipynb  算法总结与对比.ipynb
python/RL/IL/: 0_世界模型方案.ipynb  5_deformable_attention.ipynb  8_lss_training_flow.ipynb
python/RL/demo/: main.py  visualization.py
python/RL/extended_knowledge/: DPO.ipynb  Diffusion_policy.ipynb  Flow_policy.ipynb  GRPO.ipynb
python/RL/world_model/: 3_DDPM原理及代码详解.ipynb
python/casadi/: Casadi_Python_用法与Demo.ipynb
python/demo/demo01/: read_write_data.py
python/markdown/: markdown.ipynb
python/matplotlib/: 1_concept.ipynb
python/numpy/: calculate.py  linear_algebra.ipynb  operate.ipynb  operate.py  property.ipynb  property.py  random.ipynb  数据分析与可视化实战案例：学习时间与成绩的关系（线性回归）.ipynb
python/os/: a.py  os.ipynb  system.py
python/pandas/: dataframe.py  out.pickle  pandas1.ipynb  pandas1_series_df.ipynb  pandas2.ipynb  pandas3.ipynb  pandas4_read_files.ipynb  pandas5.ipynb  pandas6.ipynb
python/pandas/.virtual_documents/: pandas.ipynb
python/torch/: 10_softmax_regression.ipynb  1_base_operator.ipynb  2_grad_gpu.ipynb  3_linear_matrix.ipynb  6_probability.ipynb  7_mannual_regression.py  9_softmax_regression.ipynb  9_softmax_regression_manual.ipynb  __test_gpu_usage.py
python/tqdm/: 1_operate.ipynb  test.py
(+103 files in other folders)
